--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Machine Grooving Studio</title>
     <style> body {padding: 0; margin: 0;} </style>
     <script src="libs/p5.js"></script>
+    <script src="libs/stringbuffer.js"></script>
     <script src="src/sketch.js"></script>
   </head>
   <body>
