Implement DOL-systems rendering

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script src="libs/p5.js"></script>
     <script src="libs/stringbuffer.js"></script>
     <script src="libs/lsystem.js"></script>
+    <script src="libs/turtle.js"></script>
+    <script src="src/scenes.js"></script>
     <script src="src/sketch.js"></script>
   </head>
   <body>
