--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Machine Grooving Studio</title>
-    <style> body {padding: 0; margin: 0;} </style>
-    <script src="libs/p5.js"></script>
-    <script src="libs/stringbuffer.js"></script>
-    <script src="libs/lsystem.js"></script>
-    <script src="libs/turtle.js"></script>
-    <script src="src/scenes.js"></script>
-    <script src="src/sketch.js"></script>
-  </head>
-  <body>
-  </body>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Machine Grooving Studio</title>
+        <style> body {padding: 0; margin: 0;} </style>
+        <script src="libs/p5.min.js"></script>
+        <script src="libs/stringbuffer.js"></script>
+        <script src="libs/lsystem.js"></script>
+        <script src="libs/turtle.js"></script>
+        <script src="src/scenes.js"></script>
+        <script src="src/sketch.js"></script>
+    </head>
+    <body>
+    </body>
 </html>
