--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Machine Grooving Studio</title>
+        <link rel='shortcut icon' type='image/x-icon' href='assets/favicon.ico' />
+        <title>L-systems</title>
         <style> body {padding: 0; margin: 0;} </style>
         <script src="libs/p5.min.js"></script>
         <script src="libs/stringbuffer.js"></script>
