Limit number of derivations per ruleset

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
         <title>L-systems</title>
         <style> body {padding: 0; margin: 0;} </style>
         <script src="libs/p5.min.js"></script>
-        <script src="libs/stringbuffer.js"></script>
-        <script src="libs/lsystem.js"></script>
-        <script src="libs/turtle.js"></script>
+        <script src="src/stringbuffer.js"></script>
+        <script src="src/lsystem.js"></script>
+        <script src="src/turtle.js"></script>
         <script src="src/scenes.js"></script>
         <script src="src/sketch.js"></script>
     </head>
