--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel='shortcut icon' type='image/x-icon' href='assets/favicon.ico' />
         <title>L-systems</title>
-        <style> body {padding: 0; margin: 0;} </style>
+        <style>
+            html, body {
+                margin: 0;
+                padding: 0;
+            }
+            canvas {
+                display: block;
+            }
+        </style>
         <script src="libs/p5.min.js"></script>
         <script src="src/stringbuffer.js"></script>
         <script src="src/lsystem.js"></script>
