Extract page stylesheet to external file

--- a/index.html
+++ b/index.html
@@ -3,17 +3,9 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel='shortcut icon' type='image/x-icon' href='assets/favicon.ico' />
+        <link rel="shortcut icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="stylesheet" href="styles.css">
         <title>L-systems</title>
-        <style>
-            html, body {
-                margin: 0;
-                padding: 0;
-            }
-            canvas {
-                display: block;
-            }
-        </style>
         <script src="libs/p5.min.js"></script>
         <script src="src/stringbuffer.js"></script>
         <script src="src/lsystem.js"></script>
