Rename scenes to grammars codewise

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <script src="src/stringbuffer.js"></script>
         <script src="src/lsystem.js"></script>
         <script src="src/turtle.js"></script>
-        <script src="src/scenes.js"></script>
+        <script src="src/grammars.js"></script>
         <script src="src/sketch.js"></script>
     </head>
     <body>
